--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="index.css">
+<script type="module" src="index.js"></script>
+
 </head>
 <body>
     <div id="root"></div>
